--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev:ts": "tsc -w"
   },
   "dependencies": {
+    "@prisma/client": "4.10.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
+    "prisma": "^4.10.1",
     "typescript": "^4.9.5"
   }
 }
