--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "src/server/index.ts",
   "scripts": {
     "start": "node dist/server/index.js",
-    "dev:ts": "tsc -w"
+    "dev:ts": "tsc",
+    "dev:ts:run": "yarn dev:ts && yarn start",
+    "dev:tsw": "tsc -w",
+    "dev:tsw:run": "concurrently \"yarn dev:tsw\" \"nodemon dist/server/index.js\""
   },
   "dependencies": {
     "@prisma/client": "4.10.1",
@@ -17,6 +20,8 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
+    "concurrently": "^7.6.0",
+    "nodemon": "^2.0.20",
     "prisma": "^4.10.1",
     "typescript": "^4.9.5"
   }
