--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,13 +1,13 @@
 {
   "name": "client",
   "type": "module",
-  "proxy": "http://localhost:5000",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
