--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/server/index.js",
     "build": "yarn && yarn prisma:generate && yarn dev:ts && cd src/client && yarn && yarn build && cd ../../ && yarn start",
-    "prisma:generate": "npx prisma generate name --init",
+    "prisma:generate": "npx prisma migrate dev --name init",
     "dev:ts": "tsc",
     "dev:ts:run": "yarn dev:ts && yarn start",
     "dev:tsw": "tsc -w",
