--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server/index.ts",
   "scripts": {
     "start": "node dist/server/index.js",
-    "build": "yarn && yarn prisma:generate && yarn dev:ts && cd src/client && yarn && yarn build && cd ../../ && yarn start",
+    "build": "yarn && yarn prisma:generate && yarn dev:ts && cd src/client && yarn && yarn build && cd ../../",
     "prisma:generate": "npx prisma migrate dev --name init",
     "dev:ts": "tsc",
     "dev:ts:run": "yarn dev:ts && yarn start",
