--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "rootDir": "src/server",
     "outDir": "dist/server",
     "esModuleInterop": true,
+    "removeComments": true,
     "skipLibCheck": true,
     "strict": true,
   },
