--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "4.10.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
